--- a/mingw-w64-flang/PKGBUILD
+++ b/mingw-w64-flang/PKGBUILD
@@ -5,11 +5,9 @@ _compiler=clang
 _realname=flang
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=19.1.7
-_rc=""
-_tag=llvmorg-${_version}${_rc}
-pkgver=${_version}${_rc/-/}
-pkgrel=2
+_pkgver=20.1.0
+pkgver=${_pkgver/-/}
+pkgrel=1
 pkgdesc="Fortran frontend for LLVM (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -35,28 +33,26 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-clang-tools-extra"
                "${MINGW_PACKAGE_PREFIX}-gcc")
              )
 optdepends=("${MINGW_PACKAGE_PREFIX}-llvm-openmp")
-_pkgfn=${_realname}-${pkgver}.src
-_url=https://github.com/llvm/llvm-project/releases/download/${_tag}
+_pkgfn=${_realname}-${_pkgver}.src
+_url=https://github.com/llvm/llvm-project/releases/download/llvmorg-${_pkgver}
 source=("${_url}/${_pkgfn}.tar.xz"{,.sig}
-        "${_url}/cmake-${pkgver}.src.tar.xz"{,.sig}
+        "${_url}/cmake-${_pkgver}.src.tar.xz"{,.sig}
         "0001-fold-double-bessel-functions-on-windows.patch"
         "0002-cmake-22162.patch"
         "0003-flang-Inherit-target-specific-code-for-BIND-C-types.patch"
         "0004-do-not-define-pid_t-on-mingw.patch"
         "0005-Fix-c_long_double-value-on-mingw-aarch64.patch"
-        "0006-Rename-flang-new-flang-experimental-exec-to-flang.patch"
         "0007-add-municode-flag-on-mingw.patch"
         "0008-do-not-use-clock_gettime-on-mingw.patch")
-sha256sums=('632d598e990500c021a47b4f981efd39518d363b03d99da5ba4c1b14d838c40b'
+sha256sums=('08b1e0665bed7d91741e3eea06b9802c78e73a7dc581efb8b4b2f12e16d658e1'
             'SKIP'
-            '11c5a28f90053b0c43d0dec3d0ad579347fc277199c005206b963c19aae514e3'
+            '9fcd319c6bb87344673f262ef5a6a01262fc9a0a741f3477b7e47e238441268d'
             'SKIP'
             'ae666c454909f6695bcd69f067b9c5abf8a6e82ce2930955b8598ab3b58a5204'
             '77fb0612217b6af7a122f586a9d0d334cd48bb201509bf72e8f8e6244616e895'
             'bb7336e461a09d4af29cde2fd32081c8fcca7f93e9f9b6779eb074b3780fd002'
             '90bec8f2a9a8d62b57959722f3b15a54dfdaf24e0a5ea884bf6b1288d0853be8'
             'a1811227e2a26c2786b0c8577528580e679111f6c0889afea57d08333e2d5e4f'
-            'f1b7a186e4890a67adc8e56800c7a91e72f04f14df3db20d7bcf7eaa149aa567'
             '45f8da68b2cb48c85db7099e174e7eebeabe90207a23ff19c7fe1e7f1f8541d8'
             'be1265d4922f45cc4e7ec6a80247baba8b1e648e1e514718ebd1004958bae967')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
@@ -73,8 +69,8 @@ apply_patch_with_msg() {
 
 prepare() {
   [[ -d ./cmake ]] && rm -rf ./cmake
-  mv cmake-$pkgver.src cmake
-  cd "${srcdir}/flang-${pkgver}.src"
+  mv cmake-${_pkgver}.src cmake
+  cd "${srcdir}/flang-${_pkgver}.src"
 
   apply_patch_with_msg \
     "0001-fold-double-bessel-functions-on-windows.patch" \
@@ -84,9 +80,6 @@ prepare() {
     "0005-Fix-c_long_double-value-on-mingw-aarch64.patch" \
     "0007-add-municode-flag-on-mingw.patch" \
     "0008-do-not-use-clock_gettime-on-mingw.patch"
-  # https://github.com/llvm/llvm-project/commit/06eb10da
-  apply_patch_with_msg \
-    "0006-Rename-flang-new-flang-experimental-exec-to-flang.patch"
 }
 
 build() {
