--- a/mingw-w64-libclc/PKGBUILD
+++ b/mingw-w64-libclc/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libclc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_pkgver=20.1.0-rc3
+_pkgver=20.1.0
 pkgver=${_pkgver/-/}
 pkgrel=1
 pkgdesc='Library requirements of the OpenCL C programming language (mingw-w64)'
@@ -21,9 +21,9 @@ _pkgfn=${_realname}-${_pkgver}.src
 source=($_url/$_pkgfn.tar.xz{,.sig}
         0001-cmake-copy-instead-symlink.patch
         0002-fix-pkgconfig-file.patch)
-sha256sums=('SKIP'
+sha256sums=('02ee864c9974268509d3777e8f15bb3ebb2cc4ffe456d9aa79a352c5788c15a8'
             'SKIP'
-            'SKIP'
+            'b974a117ec1a658ec529f271960ff10cedc3eb0636f3f0d6773a89934a7d1e90'
             'f0c995d679214dbb1248f15365c6d26440efa0afc76402172068456f99109c25')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
